[package]
edition = "2021"
name = "color_quant"
license = "MIT"
version = "1.1.0"
authors = ["nwin <nwin@users.noreply.github.com>"]
readme = "README.md"
description = "Color quantization library to reduce n colors to 256 colors."
repository = "https://github.com/image-rs/color_quant.git"

[dependencies]
# libm: "Uncomment if you wish to use `Float` and `Real` without `std`"
num-traits = { version = "0.2", default-features = false }

[features]
libm = ["num-traits/libm"]