[package]
# NOTE: 2018 is needed else "maybe a missing crate `core`"
edition = "2018"
name = "color_quant"
license = "MIT"
version = "1.1.0"
authors = ["nwin <nwin@users.noreply.github.com>"]
readme = "README.md"
description = "Color quantization library to reduce n colors to 256 colors."
repository = "https://github.com/image-rs/color_quant.git"

[dependencies]
num-traits = { version = "0.2", default-features = false, optional = true }

[features]
default = ["std"]
std = []
num-traits = ["dep:num-traits"]